# cim-to-linkml

./: .gitignore  Notes.md  README.md  cim.yml  jemoeder.yml  non_normative_packages.txt  out.yml  pyproject.toml  tree_na_maar_incl_docbase_docdc.txt  tree_voor.txt  wires.yml  zip.txt
cim_to_linkml/: __init__.py  generator.py  generator_class.py  linkml_model.py  main.py  parser.py  read.py  reader.py  serializer.py  uml_model.py  writer.py
sandbox/: test.py
sandbox/v1/: out.yml  uitleg
sandbox/v2/: jemoeder.yml  out.yml
sandbox/v3/: Wires.yml  jemoeder.yml  out.yml
sandbox/v4/: jemoeder.yml  out.yml
sandbox/v5/: jemoeder.yml  out.yml
schemas/: 10.yml  100.yml  101.yml  102.yml  105.yml  106.yml  107.yml  109.yml  11.yml  111.yml  112.yml  113.yml  114.yml  115.yml  116.yml  117.yml  118.yml  119.yml  12.yml  120.yml  121.yml  122.yml  123.yml  124.yml  125.yml  126.yml  127.yml  129.yml  13.yml  130.yml  131.yml  133.yml  134.yml  135.yml  136.yml  138.yml  139.yml  14.yml  140.yml  141.yml  (+109 more)
src/cim_to_linkml/: generator.py  linkml_model.py  parser.py  reader.py  uml_model.py  writer.py
src/cim_to_linkml/cim18/: generator.py  main.py  parser.py  reader.py  transform.py  uml_model.py  writer.py
src/cim_to_linkml/cim18/linkml/: generate.py  generator.py  model.py  writer.py
src/cim_to_linkml/cim18/linkml/cardinality/: generate.py
src/cim_to_linkml/cim18/linkml/class_/: generate.py  model.py
src/cim_to_linkml/cim18/linkml/enumeration/: generate.py  model.py
src/cim_to_linkml/cim18/linkml/schema/: generate.py  model.py
src/cim_to_linkml/cim18/linkml/slot/: generate.py  model.py
src/cim_to_linkml/cim18/linkml/type_/: generate.py  model.py
src/cim_to_linkml/cim18/uml/: model.py  parser.py
src/cim_to_linkml/cim18/uml/class_/: model.py  parse.py  query.py  read.py
src/cim_to_linkml/cim18/uml/multiplicity/: model.py  parse.py
src/cim_to_linkml/cim18/uml/package/: model.py  parse.py  query.py  read.py
src/cim_to_linkml/cim18/uml/project/: model.py  parse.py
src/cim_to_linkml/cim18/uml/relation/: model.py  parse.py  query.py  read.py
src/cim_to_linkml/cim18/uml/type_/: model.py  parse.py
