[project]
name = "cim-to-linkml"
version = "3.0.0-alpha1"
description = "Generates a LinkML schema of the canonical CIM based on the official Sparx EA UML model."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bart Kleijngeld", email = "bartkl@gmail.com" }]
dependencies = []

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[project.scripts]
cim-to-linkml = "cim_to_linkml.main:cli"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyright>=1.1.400",
]

[tool.setuptools]
packages = [ "cim_to_linkml" ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"