[project]
name = "cim-to-linkml"
version = "3.0.0-alpha1"
description = "Generates a LinkML schema of the canonical CIM based on the official Sparx EA UML model."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Bart Kleijngeld", email = "bartkl@gmail.com" }]
dependencies = [
    "click>=8.2.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
cim-to-linkml = "cim_to_linkml.main:cli"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyright>=1.1.400",
    "setuptools>=80.7.1",
    "wheel>=0.45.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
